--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Main tangram library -->
         <!-- production -->
-        <script src="https://mapzen.com/tangram/0.14/tangram.min.js"></script>
+        <script src="https://www.nextzen.org/tangram/0.14/tangram.min.js"></script>
         <!-- production debug -->
         <!-- <script src="https://mapzen.com/tangram/0.14/tangram.debug.js"></script> -->
         <!-- dev -->
@@ -225,13 +225,13 @@
 
         var dev_or_prod = 'prod';
         // prod
-        var mapzen_api_key = 'vector-tiles-h6AbVZA';
+        var sdk_api_key = '8HNQZsjzTJyNhnoyr_7yrQ';
 
         if( dev_or_prod == 'dev' ) {
-            mapzen_api_key = 'mapzen-iP15tWp';
+            sdk_api_key = '8HNQZsjzTJyNhnoyr_7yrQ';
         }
 
-        var tg_global = { sdk_mapzen_api_key: mapzen_api_key };
+        var tg_global = { sdk_api_key: sdk_api_key };
 
         var layer = Tangram.leafletLayer({
             // more: 'mapzen-n22UFkv'
