update to use key from refill

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
 
         var dev_or_prod = 'prod';
         // prod
-        var sdk_api_key = 'd161Q8KATMOhSOcVGNyQ8g';
+        var sdk_api_key = 'ckD92axlTP6zj4BK6rhhhA';
 
         if( dev_or_prod == 'dev' ) {
-            sdk_api_key = 'd161Q8KATMOhSOcVGNyQ8g';
+            sdk_api_key = 'ckD92axlTP6zj4BK6rhhhA';
         }
 
         var tg_global = { sdk_api_key: sdk_api_key };
